@@ -3,11 +3,11 @@ Section: debian-installer
 Priority: standard
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Martin Sjogren <sjogren@debian.org>, Petter Reinholdtsen <pere@debian.org>
-Build-Depends: debhelper (>= 4.1.16), dpkg-dev (>= 1.7.0), libdebconfclient0-dev (>= 0.46), libdebian-installer4-dev (>= 0.16)
+Build-Depends: debhelper (>= 4.1.16), dpkg-dev (>= 1.7.0), libdebconfclient0-dev (>= 0.46), libdebian-installer4-dev (>= 0.18)
 
 Package: anna
 Architecture: any
-Depends: libc-udeb, cdebconf-udeb, retriever
+Depends: libc-udeb, cdebconf-udeb, retriever, archdetect
 Description: anna's not nearly apt, but for the Debian installer, it will do
 
 Package: load-installer
