@@ -4,8 +4,12 @@ anna (0.049) UNRELEASED; urgency=low
     - Updated russian translation
   * Ming Hua
     - Updated Simplified Chinese translation (zh_CN.po)
+  * Bastian Blank
+    - Enable support for Subarchitecure.
+    - Depend against archdetect.
+    - Build-Depend against libdebian-installer4-dev (>= 0.18).
 
- -- Nikolai Prokoschenko <nikolai@prokoschenko.de>  Sun, 11 Jan 2004 00:27:20 +0100
+ -- Bastian Blank <waldi@debian.org>  Sat, 17 Jan 2004 15:44:50 +0100
 
 anna (0.048) unstable; urgency=low
 
